; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_step_over.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Atari800/atari800-src/extr_monitor.c_step_over.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU_regPC = common dso_local global i64 0, align 8
@MONITOR_optype6502 = common dso_local global i32* null, align 8
@MONITOR_break_addr = common dso_local global i64 0, align 8
@TRUE = common dso_local global i8* null, align 8
@break_over = common dso_local global i8* null, align 8
@MONITOR_break_step = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @step_over to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @step_over() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @CPU_regPC, align 8
  %3 = call i64 @MEMORY_SafeGetByte(i64 %2)
  %4 = trunc i64 %3 to i32
  store i32 %4, i32* %1, align 4
  %5 = load i32, i32* %1, align 4
  %6 = and i32 %5, 31
  %7 = icmp eq i32 %6, 16
  br i1 %7, label %11, label %8

8:                                                ; preds = %0
  %9 = load i32, i32* %1, align 4
  %10 = icmp eq i32 %9, 32
  br i1 %10, label %11, label %22

11:                                               ; preds = %8, %0
  %12 = load i64, i64* @CPU_regPC, align 8
  %13 = load i32*, i32** @MONITOR_optype6502, align 8
  %14 = load i64, i64* @CPU_regPC, align 8
  %15 = call i64 @MEMORY_SafeGetByte(i64 %14)
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  %18 = and i32 %17, 3
  %19 = sext i32 %18 to i64
  %20 = add nsw i64 %12, %19
  store i64 %20, i64* @MONITOR_break_addr, align 8
  %21 = load i8*, i8** @TRUE, align 8
  store i8* %21, i8** @break_over, align 8
  br label %24

22:                                               ; preds = %8
  %23 = load i8*, i8** @TRUE, align 8
  store i8* %23, i8** @MONITOR_break_step, align 8
  br label %24

24:                                               ; preds = %22, %11
  ret void
}

declare dso_local i64 @MEMORY_SafeGetByte(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
